add database schema